--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="/init.js"></script>
-	<link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,700;1,500&family=Red+Hat+Display:ital,wght@0,400;0,500;0,700;1,400;1,500&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400&family=Ubuntu:ital,wght@0,700;1,500&family=Red+Hat+Display:ital,wght@0,400;0,500;0,700;1,400;1,500&display=swap" rel="stylesheet">
 </head>
 <body>
 	<div class="container mx-auto">
@@ -78,7 +78,7 @@
 		<section id="committee" class="arrow pt-xlarge">
 			<div class="content pb-large">
 				<div class="w75 mx-auto mt-xlarge flex flex-vert-center flex-column">
-					<h2 class="teal">PROGRAM COMMITTEE</h2>
+					<h2 class="darkblue">PROGRAM COMMITTEE</h2>
 					<div>foo</div>
 				</div>
 			</div>
@@ -86,7 +86,7 @@
 		<section id="sponsors" class="arrow pt-xlarge">
 			<div class="content pb-large">
 				<div class="w75 mx-auto mt-xlarge flex flex-vert-center flex-column">
-					<h2 class="teal">SPONSORS</h2>
+					<h2 class="darkblue">SPONSORS</h2>
 					<div>bar</div>
 				</div>
 			</div>
