--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		</section>
 		<section id="experience" class="grad pt-xlarge">
 			<div class="content pb-large">
-				<div class="w75 mx-auto mt-xlarge flex flex-vert-center flex-column">
+				<div class="w75 mx-auto my-xlarge flex flex-vert-center flex-column">
 					<h2>THE CASSANDRA WORLD PARTY EXPERIENCE</h2>
 					<iframe class="ma-large" src="https://www.youtube.com/embed/videoseries?list=PLqcm6qE9lgKLi4TD3azt3soaCjfXte32m" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				</div>
