--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 				<div class="pr-medium"><a href="https://www.apache.org/security" target="_blank">Security</a></div>
 				<div class="pr-medium"><a href="https://www.apache.org/foundation/sponsorship" target="_blank">Sponsorship</a></div>
 			</div>
-			<p class="flex flex-center my-medium">&copy; <script>document.write(new Date().getFullYear())</script> <a href="https://apache.org" target="_blank">The Apache Software Foundation</a> under the terms of the Apache License 2.0. Apache, the Apache feather logo, and Apache Cassandra are trademarks of The Apache Software Foundation.</p>
+			<p class="flex flex-center my-medium white">&copy; <script>document.write(new Date().getFullYear())</script> The Apache Software Foundation under the terms of the Apache License 2.0. Apache, the Apache feather logo, and Apache Cassandra are trademarks of The Apache Software Foundation.</p>
 		</div>
 	</div>
 </body>
