--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>Apache Cassandra | World Party 2022</title>
 	<link rel="stylesheet" href="style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-	<script src="/init.js" type="module" defer></script>
+	<script src="init.js" type="module" defer></script>
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400&family=Ubuntu:ital,wght@0,700;1,500&family=Red+Hat+Display:ital,wght@0,400;0,500;0,700;1,400;1,500&display=swap" rel="stylesheet">
 </head>
 <body>
