--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 			<div class="content pb-large">
 				<div class="w75 mx-auto mt-xlarge flex flex-vert-center flex-column">
 					<h2 class="darkblue">PROGRAM COMMITTEE</h2>
-					<div>foo</div>
+					<div>Coming Soon</div>
 				</div>
 			</div>
 		</section>
@@ -211,7 +211,7 @@
 			<div class="content pb-large">
 				<div class="w75 mx-auto mt-xlarge flex flex-vert-center flex-column">
 					<h2 class="darkblue">SPONSORS</h2>
-					<div>bar</div>
+					<div>Coming Soon</div>
 				</div>
 			</div>
 		</section>
