Registration hyperlinks & sponsorship email added

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				<div class="flex flex-center flex-space-around z3 mx-auto">
 					<a href="/cassandra-basics/" class="btn btn--filled">Submit your talk</a>
 					<img src="img/logo.svg">
-					<a class="btn btn--grad" href="https://cassandra.apache.org/worldparty/" target="_blank"><span>Register Now</span></a>
+					<a class="btn btn--grad" href="https://5iwm1iun629.typeform.com/to/R9eTh906" target="_blank"><span>Register Now</span></a>
 				</div>	
 			</div>
 		</div>
@@ -58,7 +58,7 @@
 				<div id="hero-ctas" class="flex flex-center ma-large">
 					<a href="/cassandra-basics/" class="btn btn--filled">Submit your talk</a>
 					<div class="mx-auto"></div>
-					<a class="btn btn--grad" href="https://cassandra.apache.org/worldparty/" target="_blank"><span>Register Now</span></a>
+					<a class="btn btn--grad" href="https://5iwm1iun629.typeform.com/to/R9eTh906" target="_blank"><span>Register Now</span></a>
 				</div>
 			</div>
 		</header>
@@ -211,7 +211,7 @@
 			<div class="content pb-large">
 				<div class="w75 mx-auto mt-xlarge flex flex-vert-center flex-column">
 					<h2 class="darkblue">SPONSORS</h2>
-					<div>Coming Soon</div>
+					<div>Email <a href="mailto:events@constantia.io">events@constantia.io</a> for Sponsorship Prospectus.</div>
 				</div>
 			</div>
 		</section>
