CFP links added

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					</g>
 				  </svg>
 				<div class="flex flex-center flex-space-around z3 mx-auto">
-					<a href="/cassandra-basics/" class="btn btn--filled">Submit your talk</a>
+					<a href="https://sessionize.com/apache-cassandra-4-1-world-party/" class="btn btn--filled">Submit your talk</a>
 					<img src="img/logo.svg">
 					<a class="btn btn--grad" href="https://5iwm1iun629.typeform.com/to/R9eTh906" target="_blank"><span>Register Now</span></a>
 				</div>	
@@ -56,7 +56,7 @@
 				<h2 class="my-medium">July 20, 2022</h2>
 				<h4>Virtual + Local Watch Parties</h4>
 				<div id="hero-ctas" class="flex flex-center ma-large">
-					<a href="/cassandra-basics/" class="btn btn--filled">Submit your talk</a>
+					<a href="https://sessionize.com/apache-cassandra-4-1-world-party/" class="btn btn--filled">Submit your talk</a>
 					<div class="mx-auto"></div>
 					<a class="btn btn--grad" href="https://5iwm1iun629.typeform.com/to/R9eTh906" target="_blank"><span>Register Now</span></a>
 				</div>
@@ -97,7 +97,7 @@
 								<h3 class="text-center white">We are accepting submissions for Lightning Talks.</h3>
 								<h3 class="text-center white">5 slides in 5 minutes.</h3>
 							</div>
-							<a class="btn btn--filled mx-auto" href="https://cassandra.apache.org/worldparty/" target="_blank"><span>submit your talk now</span></a>
+							<a class="btn btn--filled mx-auto" href="https://sessionize.com/apache-cassandra-4-1-world-party/" target="_blank"><span>submit your talk now</span></a>
 							<p class="white mx-auto my-large text-center">Submissions due by 23:59 PDT on Friday, June 17, 2022</p>
 						</div>
 						<svg width="184px" height="184px" viewBox="0 0 184 184" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"> <g id="world-party---cassandra-version-Noir" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"> <g id="World-Party-Cassandra-Noir" transform="translate(-1088.000000, -2508.000000)"> <g id="Section---Submit-to-Talk" transform="translate(-5.000000, 2053.000000)"> <g id="Icon---5-min" transform="translate(1101.000000, 460.000000)"> <circle id="Oval" stroke="#1D93B0" stroke-width="8" cx="83.9341112" cy="87.1981982" r="87.5"></circle> <g id="Group" transform="translate(56.434111, -0.301802)" fill="#A3BE71"> <path d="M26.9947506,86.8364398 C27.0170663,86.8155695 103.197285,86.7024867 103.357789,86.8364398 C103.357789,44.8399681 69.1688919,10.7949283 26.9947506,10.7949283 C27.0020934,10.7846277 26.9702314,86.8364398 26.9947506,86.8364398 Z" id="Oval-Copy-2"></path> </g> </g> </g> </g> </g> </svg>
