corrected CFP opening in same tab

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					</g>
 				  </svg>
 				<div class="flex flex-center flex-space-around z3 mx-auto">
-					<a href="https://sessionize.com/apache-cassandra-4-1-world-party/" class="btn btn--filled">Submit your talk</a>
+					<a href="https://sessionize.com/apache-cassandra-4-1-world-party/" target="_blank" class="btn btn--filled">Submit your talk</a>
 					<img src="img/logo.svg">
 					<a class="btn btn--grad" href="https://5iwm1iun629.typeform.com/to/R9eTh906" target="_blank"><span>Register Now</span></a>
 				</div>	
@@ -56,7 +56,7 @@
 				<h2 class="my-medium">July 20, 2022</h2>
 				<h4>Virtual + Local Watch Parties</h4>
 				<div id="hero-ctas" class="flex flex-center ma-large">
-					<a href="https://sessionize.com/apache-cassandra-4-1-world-party/" class="btn btn--filled">Submit your talk</a>
+					<a href="https://sessionize.com/apache-cassandra-4-1-world-party/" target="_blank" class="btn btn--filled">Submit your talk</a>
 					<div class="mx-auto"></div>
 					<a class="btn btn--grad" href="https://5iwm1iun629.typeform.com/to/R9eTh906" target="_blank"><span>Register Now</span></a>
 				</div>
