AxonOps added to sponsors

--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@
 			<div class="content pb-large">
 				<div class="w75 mx-auto mt-xlarge flex flex-vert-center flex-column">
 					<h2 class="darkblue">SPONSORS</h2>
+					<img src="img/sponsors/AxonopsDigitalMaster_AxonopsFullLogoGradient.svg" alt="AxonOps" style="width:300px;height:121px">
 					<div>Email <a href="mailto:events@constantia.io">events@constantia.io</a> for Sponsorship Prospectus.</div>
 				</div>
 			</div>
