Home Depot added to sponsors

--- a/index.html
+++ b/index.html
@@ -211,7 +211,10 @@
 			<div class="content pb-large">
 				<div class="w75 mx-auto mt-xlarge flex flex-vert-center flex-column">
 					<h2 class="darkblue">SPONSORS</h2>
-					<img src="img/sponsors/AxonopsDigitalMaster_AxonopsFullLogoGradient.svg" alt="AxonOps" style="width:300px;height:121px">
+					<a href="https://axonops.com/" target="_blank">
+						<img src="img/sponsors/AxonopsDigitalMaster_AxonopsFullLogoGradient.svg" alt="AxonOps" style="width:300px;height:121px"></a>
+					<a href="https://careers.homedepot.com/career-areas/technology/" target="_blank">
+						<img src="img/sponsors/THD_logo.jpg" alt="Home Depot" style="width:300px;height:300px"></a>
 					<div>Email <a href="mailto:events@constantia.io">events@constantia.io</a> for Sponsorship Prospectus.</div>
 				</div>
 			</div>
