Program Committee added

--- a/index.html
+++ b/index.html
@@ -203,7 +203,12 @@
 			<div class="content pb-large">
 				<div class="w75 mx-auto mt-xlarge flex flex-vert-center flex-column">
 					<h2 class="darkblue">PROGRAM COMMITTEE</h2>
-					<div>Coming Soon</div>
+					<div>Melissa Logan, Apache Cassandra Contributor & Program Chair</br>
+					    Ekaterina Dimitrova, Apache Cassandra Committer</br>
+					    Josh McKenzie, Apache Cassandra PMC</br>
+					    Mick Semb Weaver, Apache Cassandra PMC</br>
+					    Patrick McFadin, Apache Cassandra Contributor
+					</div>
 				</div>
 			</div>
 		</section>
