--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 				</div>
 			</div>
 		</section>
-		<section id="committee" class="arrow pt-xlarge hidden">
+		<section id="committee" class="arrow pt-xlarge">
 			<div class="content pb-large">
 				<div class="w75 mx-auto mt-xlarge flex flex-vert-center flex-column">
 					<h2 class="darkblue">PROGRAM COMMITTEE</h2>
