schedule and sponsors update

--- a/index.html
+++ b/index.html
@@ -127,7 +127,24 @@
 						<div class="cell grid grid-center text-center pa-medium">0100-0200 UTC</div>
 
 						<div class="cell grid pa-medium header row-title">Moderators</div>
-						<div class="cell grid grid-center pa-medium">Coming Soon</div>
+						<div class="cell grid grid-center pa-medium">
+							<div class="cell-item">
+								<h4>Cassandra in Online Education</h4>
+								<h5>li li</h5>
+							</div>
+							<div class="cell-item">
+								<h4>Using SSTable immutability for incremental backup</h4>
+								<h5>Manish Khandelwal</h5>
+							</div>
+							<div class="cell-item">
+								<h4>Using Authorizer With CassandraDB</h4>
+								<h5>Lakhan Samani</h5>
+							</div>
+							<div class="cell-item">
+								<h4>Practice of Cassandra in Instant Messaging Application</h4>
+								<h5>GuoWen Hong</h5>
+							</div>
+						</div>
 						<div class="cell grid grid-center pa-medium">Coming Soon</div>
 						<div class="cell grid grid-center pa-medium">Coming Soon</div>
 
@@ -203,11 +220,52 @@
 			<div class="content pb-large">
 				<div class="w75 mx-auto mt-xlarge flex flex-vert-center flex-column">
 					<h2 class="darkblue">PROGRAM COMMITTEE</h2>
-					<div>Melissa Logan, Apache Cassandra Contributor & Program Chair</br>
-					    Ekaterina Dimitrova, Apache Cassandra Committer</br>
-					    Josh McKenzie, Apache Cassandra PMC</br>
-					    Mick Semb Weaver, Apache Cassandra PMC</br>
-					    Patrick McFadin, Apache Cassandra Contributor
+					<div class="peope text-center">
+						<div class="person">
+							<div class="person__image_grad">
+								<div class="person__image">
+									<img src="img/melissa.jpg">
+								</div>
+							</div>
+							<h3>Melissa Logan</h3>
+							<h4>Apache Cassandra Contributor & Program Chair</h4>
+						</div>
+						<div class="person">
+							<div class="person__image_grad">
+								<div class="person__image">
+									<img src="img/ekaterina.jpg">
+								</div>
+							</div>
+							<h3>Ekaterina Dimitrova</h3>
+							<h4>Apache Cassandra Committer</h4>
+						</div>
+						<div class="person">
+							<div class="person__image_grad">
+								<div class="person__image">
+									<img src="img/josh.jpg">
+								</div>
+							</div>
+							<h3>Josh McKenzie</h3>
+							<h4>Apache Cassandra PMC</h4>
+						</div>
+						<div class="person">
+							<div class="person__image_grad">
+								<div class="person__image">
+									<img src="img/michael.jpg">
+								</div>
+							</div>
+							<h3>Mick Semb Weaver</h3>
+							<h4>Apache Cassandra PMC</h4>
+						</div>
+						<div class="person">
+							<div class="person__image_grad">
+								<div class="person__image">
+									<img src="img/patrick.jpg">
+								</div>
+							</div>
+							<h3>Patrick McFadin</h3>
+							<h4>Apache Cassandra Contributor</h4>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -216,10 +274,12 @@
 			<div class="content pb-large">
 				<div class="w75 mx-auto mt-xlarge flex flex-vert-center flex-column">
 					<h2 class="darkblue">SPONSORS</h2>
-					<a href="https://axonops.com/" target="_blank">
-						<img src="img/sponsors/AxonopsDigitalMaster_AxonopsFullLogoGradient.svg" alt="AxonOps" style="width:300px;height:121px"></a>
-					<a href="https://careers.homedepot.com/career-areas/technology/" target="_blank">
-						<img src="img/sponsors/THD_logo.jpg" alt="Home Depot" style="width:300px;height:300px"></a>
+					<div class="all-sponsors flex flex-row flex-vert-center">
+						<a href="https://axonops.com/" target="_blank">
+							<img src="img/sponsors/AxonopsDigitalMaster_AxonopsFullLogoGradient.svg" alt="AxonOps" width="300px" height="121px"></a>
+						<a href="https://careers.homedepot.com/career-areas/technology/" target="_blank">
+							<img src="img/sponsors/THD_logo.jpg" alt="Home Depot"></a>
+					</div>
 					<div>Email <a href="mailto:events@constantia.io">events@constantia.io</a> for Sponsorship Prospectus.</div>
 				</div>
 			</div>
