--- a/index.html
+++ b/index.html
@@ -127,7 +127,57 @@
 						<div class="cell grid grid-center text-center pa-medium">0100-0200 UTC</div>
 
 						<div class="cell grid pa-medium header row-title">Moderators</div>
-						<div class="cell grid grid-center pa-medium">
+						<div class="cell grid grid-center pa-medium">Coming Soon</div>
+						<div class="cell grid grid-center pa-medium">Coming Soon</div>
+						<div class="cell grid grid-center pa-medium">Coming Soon</div>
+
+						<div class="cell grid pa-medium header row-title">LIGHTNING TALKS</div>
+						<div class="cell grid grid-center align-top pa-medium">							
+							<div class="cell-item">
+								<h4>Getting to Know (Apache) Cassandra</h4>
+								<h5>Sharan Foga</h5>
+							</div>
+							<div class="cell-item">
+								<h4>Data Visualisation with Apache Cassandra and Grafana</h4>
+								<h5>Aleks Volochnev</h5>
+							</div>
+							<div class="cell-item">
+								<h4>Cleaning Large Scale Data in Cassandra</h4>
+								<h5>Rahul Xavier Singh</h5>
+							</div>
+							<div class="cell-item">
+								<h4>Tightening security for Apache Cassandra</h4>
+								<h5>Maulin Vasavada</h5>
+							</div>
+							</div>
+							<div class="cell-item">
+								<h4>Where's this journey taking us, What's next for Cassandra…</h4>
+								<h5>Mick Semb Wever</h5>
+							</div>
+						</div>
+						<div class="cell grid grid-center align-top pa-medium">							
+							<div class="cell-item">
+								<h4>Safe OS/system upgrade by rebooting</h4>
+								<h5>Serban Teodorescu</h5>
+							</div>
+							<div class="cell-item">
+								<h4>Cassandra-backed Streaming Graph with Quine</h4>
+								<h5>Ryan Wright</h5>
+							</div>
+							<div class="cell-item">
+								<h4>Improved Snapshots in Cassandra 4.1</h4>
+								<h5>Paulo Motta</h5>
+							</div>
+							<div class="cell-item">
+								<h4>Developing Enterprise Consciousness</h4>
+								<h5>Rahul Xavier Singh</h5>
+							</div>
+							<div class="cell-item">
+								<h4>What is Netflix waiting for in Apache Cassandra 4.x?</h4>
+								<h5>Vinay Chella</h5>
+							</div>
+						</div>
+						<div class="cell grid grid-center align-top pa-medium">
 							<div class="cell-item">
 								<h4>Cassandra in Online Education</h4>
 								<h5>li li</h5>
@@ -135,6 +185,10 @@
 							<div class="cell-item">
 								<h4>Using SSTable immutability for incremental backup</h4>
 								<h5>Manish Khandelwal</h5>
+							</div>
+							div class="cell-item">
+								<h4>Monitoring Cassandra</h4>
+								<h5>Michiel Saelen</h5>
 							</div>
 							<div class="cell-item">
 								<h4>Using Authorizer With CassandraDB</h4>
@@ -145,14 +199,6 @@
 								<h5>GuoWen Hong</h5>
 							</div>
 						</div>
-						<div class="cell grid grid-center pa-medium">Coming Soon</div>
-						<div class="cell grid grid-center pa-medium">Coming Soon</div>
-
-						<div class="cell grid pa-medium header row-title">LIGHTNING TALKS</div>
-						<div class="cell grid grid-center align-top pa-medium">Coming Soon</div>
-						<div class="cell grid grid-center align-top pa-medium">Coming Soon</div>
-						<div class="cell grid grid-center align-top pa-medium">Coming Soon</div>
-
 						<div class="cell grid pa-medium header row-title">LOCAL WATCH PARTY</div>
 						<div class="cell grid grid-center pa-medium">Coming Soon</div>
 						<div class="cell grid grid-center pa-medium">Coming Soon</div>
