fixed lightning talk cells and typo

--- a/index.html
+++ b/index.html
@@ -149,7 +149,6 @@
 								<h4>Tightening security for Apache Cassandra</h4>
 								<h5>Maulin Vasavada</h5>
 							</div>
-							</div>
 							<div class="cell-item">
 								<h4>Where's this journey taking us, What's next for Cassandra…</h4>
 								<h5>Mick Semb Wever</h5>
@@ -300,7 +299,7 @@
 									<img src="img/michael.jpg">
 								</div>
 							</div>
-							<h3>Mick Semb Weaver</h3>
+							<h3>Mick Semb Wever</h3>
 							<h4>Apache Cassandra PMC</h4>
 						</div>
 						<div class="person">
