lightning talk fix

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 								<h4>Using SSTable immutability for incremental backup</h4>
 								<h5>Manish Khandelwal</h5>
 							</div>
-							div class="cell-item">
+							<div class="cell-item">
 								<h4>Monitoring Cassandra</h4>
 								<h5>Michiel Saelen</h5>
 							</div>
