watch party update

--- a/index.html
+++ b/index.html
@@ -200,8 +200,8 @@
 						</div>
 						<div class="cell grid pa-medium header row-title">LOCAL WATCH PARTY</div>
 						<div class="cell grid grid-center pa-medium">Coming Soon</div>
-						<div class="cell grid grid-center pa-medium">Coming Soon</div>
-						<div class="cell grid grid-center pa-medium">Coming Soon</div>
+						<div class="cell grid grid-center pa-medium">London</div>
+						<div class="cell grid grid-center pa-medium">Atlanta</div>
 					</div>
 
 					<div class="container-schedule-single grid mb-medium day1">
