--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
 						<div class="cell grid grid-center text-center pa-medium">0100-0200 UTC</div>
 
 						<div class="cell grid pa-medium header row-title">Moderators</div>
-						<div class="cell grid grid-center pa-medium">Coming Soon</div>
-						<div class="cell grid grid-center pa-medium">Coming Soon</div>
-						<div class="cell grid grid-center pa-medium">Coming Soon</div>
+						<div class="cell grid grid-center pa-medium">Jeremy Hanna and Chris Bradford</div>
+						<div class="cell grid grid-center pa-medium">Ekaterina Dimitrova and Patrick McFadin</div>
+						<div class="cell grid grid-center pa-medium">Ben Bromhead and Erick Ramirez</div>
 
 						<div class="cell grid pa-medium header row-title">LIGHTNING TALKS</div>
 						<div class="cell grid grid-center align-top pa-medium">							
