add London Meetup link

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 						</div>
 						<div class="cell grid pa-medium header row-title">LOCAL WATCH PARTY</div>
 						<div class="cell grid grid-center pa-medium">Coming Soon</div>
-						<div class="cell grid grid-center pa-medium">London</div>
+						<div class="cell grid grid-center pa-medium"><a href="https://www.meetup.com/cassandra-london/events/286761227/" target="_blank">London</a></div>
 						<div class="cell grid grid-center pa-medium">Atlanta</div>
 					</div>
 
