--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 						<div class="cell grid pa-medium header row-title">LOCAL WATCH PARTY</div>
 						<div class="cell grid grid-center pa-medium">Coming Soon</div>
 						<div class="cell grid grid-center pa-medium"><a href="https://www.meetup.com/cassandra-london/events/286761227/" target="_blank">London</a></div>
-						<div class="cell grid grid-center pa-medium">Atlanta</div>
+						<div class="cell grid grid-center pa-medium">Coming Soon</div>
 					</div>
 
 					<div class="container-schedule-single grid mb-medium day1">
