add DataStax to sponsors

--- a/index.html
+++ b/index.html
@@ -199,9 +199,9 @@
 							</div>
 						</div>
 						<div class="cell grid pa-medium header row-title">LOCAL WATCH PARTY</div>
-						<div class="cell grid grid-center pa-medium">Coming Soon</div>
+						<div class="cell grid grid-center pa-medium">—</div>
 						<div class="cell grid grid-center pa-medium"><a href="https://www.meetup.com/cassandra-london/events/286761227/" target="_blank">London</a></div>
-						<div class="cell grid grid-center pa-medium">Coming Soon</div>
+						<div class="cell grid grid-center pa-medium">—</div>
 					</div>
 
 					<div class="container-schedule-single grid mb-medium day1">
@@ -322,6 +322,8 @@
 					<div class="all-sponsors flex flex-row flex-vert-center">
 						<a href="https://axonops.com/" target="_blank">
 							<img src="img/sponsors/AxonopsDigitalMaster_AxonopsFullLogoGradient.svg" alt="AxonOps" width="300px" height="121px"></a>
+						<a href="https://www.datastax.com/" target="_blank">
+							<img src="img/sponsors/datastax-logotype-positive-e1632964596359.png" alt="DataStax"></a>
 					</div>
 					<div>Email <a href="mailto:events@constantia.io">events@constantia.io</a> for Sponsorship Prospectus.</div>
 				</div>
