--- a/index.html
+++ b/index.html
@@ -321,9 +321,9 @@
 					<h2 class="darkblue">SPONSORS</h2>
 					<div class="all-sponsors flex flex-row flex-vert-center">
 						<a href="https://axonops.com/" target="_blank">
-							<img src="img/sponsors/AxonopsDigitalMaster_AxonopsFullLogoGradient.svg" alt="AxonOps" width="300px" height="121px"></a>
+							<img src="img/sponsors/AxonopsDigitalMaster_AxonopsFullLogoGradient.svg" style="margin:5" alt="AxonOps" width="300px" height="121px"></a>
 						<a href="https://www.datastax.com/" target="_blank">
-							<img src="img/sponsors/datastax-logotype-positive-e1632964596359.png" alt="DataStax" width="300px" height="45px"></a>
+							<img src="img/sponsors/datastax-logotype-positive-e1632964596359.png" style="margin:5" alt="DataStax" width="300px" height="45px"></a>
 					</div>
 					<div>Email <a href="mailto:events@constantia.io">events@constantia.io</a> for Sponsorship Prospectus.</div>
 				</div>
