remove submit talks cta

--- a/index.html
+++ b/index.html
@@ -54,10 +54,8 @@
 			<div class="text-center flex flex-center flex-column relative z2 mx-xlarge py-xlarge">
 				<img src="img/logo.svg">
 				<h2 class="my-medium">July 20, 2022</h2>
-				<h4>Virtual + Local Watch Parties</h4>
+				<h4>Virtual</h4>
 				<div id="hero-ctas" class="flex flex-center ma-large">
-					<a href="https://sessionize.com/apache-cassandra-4-1-world-party/" target="_blank" class="btn btn--filled">Submit your talk</a>
-					<div class="mx-auto"></div>
 					<a class="btn btn--grad" href="https://5iwm1iun629.typeform.com/to/R9eTh906" target="_blank"><span>Register Now</span></a>
 				</div>
 			</div>
