--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					</g>
 				  </svg>
 				<div class="flex flex-center flex-space-around z3 mx-auto">
-					<a href="https://sessionize.com/apache-cassandra-4-1-world-party/" target="_blank" class="btn btn--filled">Submit your talk</a>
+					<a href="https://sessionize.com/apache-cassandra-4-1-world-party/" target="_blank" class="btn btn--filled" style="opacity:0; pointer-events: none;">Submit your talk</a>
 					<img src="img/logo.svg">
 					<a class="btn btn--grad" href="https://5iwm1iun629.typeform.com/to/R9eTh906" target="_blank"><span>Register Now</span></a>
 				</div>	
