--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 				<div class="mx-auto w20"></div>
 				<div>
 					<p class="mb-medium">Join our one-day event that brings the global community together to celebrate the people and the technology behind Apache Cassandra. Fun, fast-paced talks keep attendees entertained around the clock – speakers are given 5 minutes and 5 slides that auto-advance every minute.</p>
-					<p>The Cassandra World Party is held virtually and via local watch parties in cities around the world. There is no cost to attend. </p>
+					<p>The Cassandra World Party is held virtually and there is no cost to attend. </p>
 				</div>
 			</div>
 		</section>
