--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 					</g>
 				  </svg>
 				<div class="flex flex-center flex-space-around z3 mx-auto">
-					<a href="https://sessionize.com/apache-cassandra-4-1-world-party/" target="_blank" class="btn btn--filled" style="opacity:0; pointer-events: none;">Submit your talk</a>
+					<a href="https://youtu.be/P-aAeUH5drY" target="_blank" class="btn btn--filled">Join Session 2</a>
 					<img src="img/logo.svg">
-					<a class="btn btn--grad" href="https://5iwm1iun629.typeform.com/to/R9eTh906" target="_blank"><span>Register Now</span></a>
+					<a class="btn btn--grad" href="https://youtu.be/_kkx8f96j0M" target="_blank"><span>Join Session 3</span></a>
 				</div>	
 			</div>
 		</div>
@@ -56,7 +56,8 @@
 				<h2 class="my-medium">July 20, 2022</h2>
 				<h4>Virtual</h4>
 				<div id="hero-ctas" class="flex flex-center ma-large">
-					<a class="btn btn--grad" href="https://5iwm1iun629.typeform.com/to/R9eTh906" target="_blank"><span>Register Now</span></a>
+					<a href="https://youtu.be/P-aAeUH5drY" target="_blank" class="btn btn--filled">Join Session 2</a>
+					<a class="btn btn--grad" href="https://youtu.be/_kkx8f96j0M" target="_blank"><span>Join Session 3</span></a>
 				</div>
 			</div>
 		</header>
