post world party updates

--- a/index.html
+++ b/index.html
@@ -42,10 +42,9 @@
 					  <use fill-opacity=".05" fill="url(#d)" xlink:href="#c"/>
 					</g>
 				  </svg>
-				<div class="flex flex-center flex-space-around z3 mx-auto">
-					<a href="https://youtu.be/P-aAeUH5drY" target="_blank" class="btn btn--filled">Join Session 2</a>
-					<img src="img/logo.svg">
-					<a class="btn btn--grad" href="https://youtu.be/_kkx8f96j0M" target="_blank"><span>Join Session 3</span></a>
+				<div class="flex flex-center flex-space-around z3 mx-auto flex-column">
+					<img class="mb-medium" src="img/logo.svg">
+					<a href="https://www.youtube.com/watch?v=wJzHQxYQ0z8&list=PLqcm6qE9lgKIPuvU06QpbSCaA7SkXQQtK" target="_blank" class="btn btn--filled">Watch the Playlist</a>
 				</div>	
 			</div>
 		</div>
@@ -56,8 +55,7 @@
 				<h2 class="my-medium">July 20, 2022</h2>
 				<h4>Virtual</h4>
 				<div id="hero-ctas" class="flex flex-center ma-large">
-					<a href="https://youtu.be/P-aAeUH5drY" target="_blank" class="btn btn--filled">Join Session 2</a>
-					<a class="btn btn--grad" href="https://youtu.be/_kkx8f96j0M" target="_blank"><span>Join Session 3</span></a>
+					<a href="https://www.youtube.com/watch?v=wJzHQxYQ0z8&list=PLqcm6qE9lgKIPuvU06QpbSCaA7SkXQQtK" target="_blank" class="btn btn--filled">Watch the Playlist</a>
 				</div>
 			</div>
 		</header>
